k8s/deployment.yml
#YAML configuration για Kubernetes
#Το deployment.yml είναι το αρχείο που εφαρμόζω στο AKS
#Aυτό είναι συμβατό για AKS,ACR,GitHub Actions
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devopsapp-deployment
  labels:
    app: devopsapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devopsapp
  template:
    metadata:
      labels:
        app: devopsapp
    spec:
      containers:
        - name: devopsapp
          image: myacr11047.azurecr.io/devopsapp:latest
          ports:
            - containerPort: 8080
